# biopipeline

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: models.py  utils.py
backend/app/routers/: __init__.py  analysis.py  hashing.py  ledger.py
backend/biopipeline/: __init__.py
backend/biopipeline/bio/: fasta_qc.py
biopipeline/bio/: __init__.py
biopipeline/blockchain/: __init__.py  hash.py
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/components/: AnalysisHistory.jsx  FetchBox.jsx  LabPanel.jsx  LedgerTable.jsx  Navbar.jsx  ProfileCard.jsx  ResultCard.jsx  UploadBox.jsx
frontend/lib/: api.js  profile.js
frontend/pages/: _app.js  _document.js  analyze.js  history.js  index.js  ledger.js  upload.js
frontend/styles/: globals.css
